welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: ';' expected but '=' found.
nbBiscuit:Int = 0;
              ^